fix slider thumbs on firefox

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -52,9 +52,11 @@ input[type="range"] {
   width: 100%;
   height: 1rem;
   border-radius: var(--roundness);
-  &::-webkit-slider-thumb {
+  &::-webkit-slider-thumb,
+  &::-moz-range-thumb {
     -webkit-appearance: none;
     padding: 0;
+    border: none;
     width: 2rem;
     height: 1rem;
     border-radius: var(--roundness);
